--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_auth: ^1.1.0
+  firebase_core: ^1.0.3
+  flutter_signin_button: ^2.0.0
+  google_sign_in: ^5.0.2
 
 dev_dependencies:
   flutter_test:
