--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   firebase_core: ^1.0.3
   flutter_signin_button: ^2.0.0
   google_sign_in: ^5.0.2
+  cloud_firestore: ^1.0.6
+  firebase_auth_web: ^1.1.0
 
 dev_dependencies:
   flutter_test:
